--- a/force-app/main/default/lwc/match/match.css
+++ b/force-app/main/default/lwc/match/match.css
@@ -10,7 +10,7 @@
 
 
 .matchName { 
-    background-color: #42bff4;
+    background-color: rgb(0, 153, 255);
     padding-left: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 17px;
