--- a/force-app/main/default/lwc/match/match.css
+++ b/force-app/main/default/lwc/match/match.css
@@ -5,7 +5,7 @@
 
  .matchGeneralDiv {
     width: 100%;
-    height: 450px;
+    height: 490px;
     position: relative;
 }
 
@@ -19,6 +19,12 @@
     width: 100%; 
     margin-bottom: 15px;
     
+}
+
+.selectedMatches {
+    font-size: 17px;
+    margin-bottom: 10px; 
+    margin-left: 5px;
 }
 
 .realmName {
@@ -52,4 +58,3 @@ p {
     height: 40px;
  
 }
-
